<resources>
    <string name="app_name">Lab2</string>
    <string name="title_activity_edit_profile">EditProfileActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="nickname">Nickname</string>
    <string name="fullname">Full name</string>
    <string name="email">Email</string>
    <string name="birthdate">Your birthdate</string>
    <string name="gender">Gender</string>
    <string name="city">City</string>
    <string name="user_profile_image">user profile image</string>
    <string name="reputation">Reputation</string>
    <string name="star">star</string>
    <string name="sportslist">Your sports</string>
    <string name="change_profile_image">change profile image</string>
    <string name="image_from__gallery">Select from gallery</string>
    <string name="image_from_camera">Take a new picture</string>

    <string name="bottom_nav_bar_profile">Profile</string>
    <string name="bottom_nav_bar_reservations">Show Reservations</string>
    <string name="bottom_nav_bar_search_playground">Search Playground</string>

    <string name="add_reservation_button">Add reservation</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="playercourt">PlayerCourt</string>
    <string name="date">Date</string>
    <string name="message">Message</string>
    <string name="sport">Sport</string>
    <string name="start">Start</string>
    <string name="separator">-</string>
    <string name="customrequest">Custom Request</string>
</resources>