<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="20dp"
    android:layout_marginHorizontal="20dp"
    >
    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <TextView
            android:id="@+id/sportSelectedDelete"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/sport"
            android:gravity="center"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/playerCourtSelectedDelete"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/playercourt"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/dateSelectedDelete"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/date"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tvMessageDelete"
            android:text="@string/message"
            android:gravity="center"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/startdelete"
                android:text="@string/start"
                android:gravity="center"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="18sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/separator"
                android:gravity="center"
                android:textColor="@color/black"
                android:layout_marginStart="8dp"
                android:textStyle="bold"
                android:textSize="18sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/enddelete"
                android:layout_marginStart="8dp"
                android:text="@string/start"
                android:gravity="center"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="18sp"/>

        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnYesDelete"
                android:textSize="14sp"
                android:textAllCaps="false"
                android:text="@string/yes"
                android:backgroundTint="@color/green"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:id="@+id/btnNoDelete"
                android:textSize="14sp"
                android:textAllCaps="false"
                android:text="@string/no"
                android:backgroundTint="@color/red"
                android:layout_margin="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle" />

        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>